multiple files renamed

--- a/Covid_US_cities_anlysis.ipynb
+++ b/Covid_US_cities_anlysis.ipynb
@@ -5,7 +5,7 @@
    "id": "reflected-diary",
    "metadata": {},
    "source": [
-    "# COVID Data Visualization for States"
+    "# COVID Data Visualization for cities"
    ]
   },
   {
